# net-map

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-05-25-netmap-m1-cli-scanner.md  2026-05-25-netmap-m2-web-ui.md
docs/superpowers/specs/: 2026-05-25-netmap-design.md  2026-05-25-netmap-m2-design.md
src/netmap/: __main__.py  cli.py  config.py  correlation.py  models.py  oui.py  storage.py
src/netmap/data/: oui.csv
src/netmap/scanner/: arp_scanner.py  base.py  loop.py  nmap_scanner.py  safety.py
src/netmap/server/: __init__.py  app.py  events.py  privilege.py  routes.py  schemas.py  subnet_bootstrap.py
src/netmap/ui/: app.js  index.html  styles.css
tests/: conftest.py
tests/api/: conftest.py  test_events.py  test_hosts.py  test_lifespan.py  test_scans.py  test_schemas.py  test_sse.py  test_static.py  test_subnets.py
tests/fixtures/: nmap-default-sample.xml  nmap-discover-sample.xml  nmap-empty.xml  oui-snippet.csv
tests/integration/: test_scan_smoke.py  test_up_smoke.py
tests/unit/: test_arp_scanner.py  test_cli.py  test_cli_up.py  test_config.py  test_correlation.py  test_events_bus.py  test_loop.py  test_models.py  test_nmap_scanner.py  test_nmap_timeouts.py  test_oui.py  test_privilege.py  test_safety.py  test_storage.py  test_storage_m2.py  test_subnet_bootstrap.py
