[project]
name = "netmap"
version = "0.2.0"
description = "Continuous inventory + topology visualizer for local networks"
requires-python = ">=3.13"
authors = [{ name = "Aymen", email = "aymen09112004@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.16.0",
    "pydantic>=2.9",
    "scapy>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "anyio>=4.6",
    "httpx>=0.28",
    "ruff>=0.6",
]

[project.scripts]
netmap = "netmap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netmap"]

[tool.hatch.build.targets.wheel.force-include]
"src/netmap/data" = "netmap/data"
"src/netmap/ui" = "netmap/ui"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: tests that exercise external binaries / sockets (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
